# orange-c

./: .gitignore  README.md
bipbuffer/: LICENSE
examples/print-color/: CMakeLists.txt  README.md  main.c
examples/strip-space/: CMakeLists.txt  README.md  strip.c
examples/test-module/: README.md  build.sh  test-1.c  test-2.c  test-3.c  test-4.c  test-5.c  util.h
fucking-tricks/: README.md  tricks.c
gengetopt/: README.md
gengetopt/apple/: Makefile  README.md  cmdline.ggo  main.cpp
gengetopt/orange/: README.md
jansson/: CMakeLists.txt  README.md
jsmn/: README.md
jsmn/jsmn/: CMakeLists.txt  Makefile
jsmn/jsmn/example/: CMakeLists.txt  jsondump.c
jsmn/jsmn/test/: CMakeLists.txt
openssl/: README.md
openssl/AES/: README.md
openssl/AES/aes-demo-1/: Makefile  main.c
openssl/AES/official/: Makefile  algo_aes.c  algo_aes.h  main.c
shells/: README.md
shells/cat/: README.md  define  demo-1.sh  demo-2.sh  demo-3.sh  demo-4.sh
shells/cat/tmp/: define
shells/var-or-exp/: README.md  configure  introduction
timer/: ATimer.hpp  README.md  build.sh  main.cpp
